Fix spacing

--- a/app/assets/stylesheets/core.scss
+++ b/app/assets/stylesheets/core.scss
@@ -389,7 +389,7 @@ hr {
   margin: 1em;
   h2 {
   text-overflow: ellipsis;
-  line-height: 1.4em;
+  line-height: 1.2em;
   max-height: 100px;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 5;
